# WeeklyPulse

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  staging-pulse.yml  weekly-pulse.yml
DOC/: Architecture.md  deployment-plan.md  edge-cases.md  implementation-plan.md  mcp-api.md  problemstatement.md  runbook.md  sign-off-checklist.md  staging-e2e.md
config/: pipeline.yaml
config/mcp/: docs-mcp.env.example  gmail-mcp.env.example  mcp.env.example  servers.json
config/products/: groww.production.yaml.example  groww.yaml
mcp-servers/gmail-mcp/: package.json
mcp-servers/google-docs-mcp/: package.json
pulse/: __init__.py  cli.py  config.py  iso_week.py  quality_gate.py  timezone_util.py
pulse/agent/: __init__.py  docs_delivery.py  email_delivery.py  mcp_client.py  models.py  orchestrator.py
pulse/ingestion/: __init__.py  cache.py  models.py  normalizer.py  play_store.py  service.py
pulse/ledger/: __init__.py  models.py  store.py
pulse/pipeline/: __init__.py  clustering.py  embeddings.py  models.py  quote_validator.py  scrubber.py  service.py  (+1 more)
tests/: conftest.py  test_cache.py  test_cli.py  test_clustering.py  test_config.py  test_docs_delivery.py  test_e2e_quality_gate.py  test_email_delivery.py  test_ingestion_service.py  test_iso_week.py  test_ledger.py  test_mcp_client.py  test_normalizer.py  test_orchestrator.py  test_pipeline_service.py  test_play_store.py  test_production.py  test_quote_validator.py  test_render.py  test_scrubber.py  test_summarizer.py
(+12 files in other folders)
