[project]
name = "weekly-pulse"
version = "0.1.0"
description = "Weekly Product Review Pulse — Groww Play Store insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "sentence-transformers>=3.0.0",
    "groq>=0.9.0",
    "google-play-scraper>=1.2.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
openai = [
    "openai>=1.0.0",
]

[project.scripts]
pulse = "pulse.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "staging: live staging E2E against real Google APIs (requires STAGING_E2E=1)",
]
